--- a/comentarios.html
+++ b/comentarios.html
@@ -28,7 +28,7 @@
                 <li class="fonte"><a href="javascript:void(0);" id="diminuir">A -</a></li> 
             </ul>
         </div> 
-    <a href="index.html" title="Ir para a página inicial"><img src="imagem/FATEC_ZONA_LESTE.png" alt="Logo Fatec Zona Leste nas cores cinza e vermelho" id="imagem"></a>
+    <a href="index.html" title="Ir para a página inicial"><img src="Imagem/FATEC_ZONA_LESTE.png" alt="Logo Fatec Zona Leste nas cores cinza e vermelho" id="imagem"></a>
     <nav id="navegacao"><!--menu de navegação-->
         <label for="bt_menu"><img src="Imagem/menu.png" alt="menu"></label>
         <input type="checkbox" id="bt_menu">
