--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
         </div> 
     <a href="index.html" title="Ir para a página inicial"><img src="imagem/FATEC_ZONA_LESTE.png" alt="Logo Fatec Zona Leste nas cores cinza e vermelho" id="imagem"></a>
-    <!--<a href="index.html" title="Ir para a página inicial"><img src="Imagem/Logo.png" alt="Logo Fatec Zona Leste nas cores cinza e vermelho" id="imagem0"></a>-->
+    <!--<a href="index.html" title="Ir para a página inicial"><img src="imagem/Logo.png" alt="Logo Fatec Zona Leste nas cores cinza e vermelho" id="imagem0"></a>-->
     <nav id="navegacao"><!--menu de navegação-->
         <label for="bt_menu"><img src="Imagem/menu.png" alt="menu"></label>
         <input type="checkbox" id="bt_menu">
